src-tauri/tests/snapshots/wire_format__task_source_branch_remote.snap
---
source: tests/wire_format.rs
assertion_line: 355
expression: "serde_json::to_value(&s).unwrap()"
---
{
  "branch": "main",
  "host": "origin",
  "type": "remote"
}
