src-tauri/tests/snapshots/wire_format__tasks_delete_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 268
expression: request_args
---
{
  "id": "00000000-0000-0000-0000-000000000001"
}
