src-tauri/tests/snapshots/wire_format__tasks_error_envelope.snap
---
source: tests/wire_format.rs
assertion_line: 296
expression: "serde_json::to_value(&err).unwrap()"
---
{
  "code": "worktree_failed",
  "message": "git worktree add failed: fatal: ..."
}
