src-tauri/tests/snapshots/wire_format__telemetry_error_envelope.snap
---
source: tests/wire_format.rs
assertion_line: 288
expression: "serde_json::to_value(&err).unwrap()"
---
{
  "code": "storage",
  "message": "db error: pool error"
}
