src-tauri/tests/snapshots/wire_format__telemetry_event_app_dau_ping.snap
---
source: tests/wire_format.rs
assertion_line: 291
expression: "serde_json::to_value(TelemetryEvent::AppDauPing).unwrap()"
---
"app_dau_ping"
