src-tauri/tests/snapshots/wire_format__telemetry_event_app_focus.snap
---
source: tests/wire_format.rs
assertion_line: 277
expression: "serde_json::to_value(&event).unwrap()"
---
"app_focus"
