src-tauri/tests/snapshots/wire_format__telemetry_event_app_unfocus.snap
---
source: tests/wire_format.rs
assertion_line: 282
expression: "serde_json::to_value(TelemetryEvent::AppUnfocus).unwrap()"
---
"app_unfocus"
