src-tauri/tests/snapshots/wire_format__telemetry_event_user_identify.snap
---
source: tests/wire_format.rs
assertion_line: 300
expression: "serde_json::to_value(TelemetryEvent::UserIdentify).unwrap()"
---
"user_identify"
