src-tauri/tests/snapshots/wire_format__telemetry_record_focus_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 253
expression: request_args
---
{
  "email": null,
  "event": "app_focus",
  "ghAccountId": null,
  "ghUsername": null
}
